<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather in the city</string>
    <string name="city">Balashiha</string>
    <string name="today">Today</string>
    <string name="degrees">degrees</string>
    <string name="cloudy">Cloudy</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="todayDate">TodayDate</string>
    <string name="tomorrowDate">TomorrowDate</string>
    <string name="imageTomorrow" translatable="false">imageTomorrow</string>
    <string name="imageToday" translatable="false">imageToday</string>
    <string name="sunny">Sunny</string>
    <string name="settings_activity">Settings</string>
    <string name="button_select">Select</string>
    <string name="checkbox_wind_speed">Wind Speed</string>
    <string name="checkbox_atmospheric_pressure">Atmospheric Pressure</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="buttonDarkText">Change to Dark Theme</string>
    <string name="buttonLightText">Change to Light Theme</string>
    <string name="textWindSpeedToday">Wind (m/s):" "</string>
    <string name="textAirPressureToday">AirPressure (mmhg):" "</string>
    <string name="textAirPressureTodayLand">"AirPressure\n(mmhg): "</string>
    <string name="windSpeedToday" translatable="false">2</string>
    <string name="airPressureToday" translatable="false">747</string>
    <string name="windSpeedTomorrow" translatable="false">5</string>
    <string name="airPressureTomorrow" translatable="false">753</string>
    <string name="empty_list" translatable="false">Cities list</string>
    <string name="textCitySettingsView">Select Your City</string>
    <string name="hintInputCity">Enter Your City</string>
    <string name="snackbarText">Select</string>
    <string name="snackbarButton">Confirm</string>
    <string-array name="city_array">
        <item>New York</item>
        <item>Moscow</item>
        <item>Paris</item>
        <item>Berlin</item>
        <item>Hong Kong</item>
        <item>London</item>
        <item>Rome</item>
        <item>Tokyo</item>
    </string-array>

    <string-array name="textDateView">
        <item>25.01.2021</item>
        <item>26.01.2021</item>
        <item>27.01.2021</item>
    </string-array>
    <string-array name="textTempView">
        <item>4 °C</item>
        <item>-1 °C</item>
        <item>-2 °C</item>
    </string-array>
    <string-array name="textWeatherView">
        <item>Cloudy</item>
        <item>Sunny</item>
        <item>Sunny</item>
    </string-array>
    <array name="imageWeatherView">
        <item>@drawable/cloudy</item>
        <item>@drawable/sunny</item>
        <item>@drawable/sunny</item>
    </array>
    <array name="windSpeedView">
        <item>1</item>
        <item>0</item>
        <item>3</item>
    </array>
    <array name="airPressureView">
        <item>747</item>
        <item>750</item>
        <item>730</item>
    </array>

</resources>