<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textTempView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degrees"
            android:textColor="@color/colorTextTempTodayView"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textDateView"
            app:layout_constraintStart_toStartOf="@+id/textDateView"
            app:layout_constraintTop_toBottomOf="@+id/textDateView" />

        <TextView
            android:id="@+id/textWeatherView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cloudy"
            android:textColor="@color/colorTextWeatherTodayView"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageWeatherView"
            app:layout_constraintEnd_toStartOf="@+id/imageWeatherView"
            app:layout_constraintTop_toTopOf="@+id/imageWeatherView" />

        <TextView
            android:id="@+id/textDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todayDate"
            android:textColor="@color/colorTextTodayDateView"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageWeatherView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="@+id/textDateView"
            app:layout_constraintStart_toStartOf="@+id/textDateView"
            app:layout_constraintTop_toBottomOf="@+id/textTempView"
            app:srcCompat="@drawable/cloudy" />

        <TextView
            android:id="@+id/textViewWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textWindSpeedToday"
            app:layout_constraintEnd_toEndOf="@+id/imageWeatherView"
            app:layout_constraintStart_toStartOf="@+id/textWeatherView"
            app:layout_constraintTop_toBottomOf="@+id/imageWeatherView" />

        <TextView
            android:id="@+id/textViewAirPressureToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textAirPressureToday"
            app:layout_constraintEnd_toStartOf="@+id/windSpeedView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textViewWindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeed" />

        <TextView
            android:id="@+id/windSpeedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windSpeedToday"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewWindSpeed"
            app:layout_constraintStart_toEndOf="@+id/textViewWindSpeed"
            app:layout_constraintTop_toTopOf="@+id/textViewWindSpeed" />

        <TextView
            android:id="@+id/airPressureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airPressureToday"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAirPressureToday"
            app:layout_constraintStart_toEndOf="@+id/textViewAirPressureToday"
            app:layout_constraintTop_toTopOf="@+id/textViewAirPressureToday" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>



