<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/scroll_weather"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/cityView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/city"
                        android:textAllCaps="true"
                        android:textColor="@color/colorCityView"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textTempTodayView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degrees"
                        android:textColor="@color/colorTextTempTodayView"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textTodayDateView"
                        app:layout_constraintStart_toStartOf="@+id/textTodayDateView"
                        app:layout_constraintTop_toBottomOf="@+id/textTodayDateView" />

                    <TextView
                        android:id="@+id/textTomorrowDateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomorrowDate"
                        android:textColor="@color/colorTextTomorrowDateView"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="@+id/textTomorrowView"
                        app:layout_constraintStart_toStartOf="@+id/textTomorrowView"
                        app:layout_constraintTop_toBottomOf="@+id/textTomorrowView" />

                    <TextView
                        android:id="@+id/textWeatherTodayView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/cloudy"
                        android:textColor="@color/colorTextWeatherTodayView"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/textTomorrowView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/tomorrow"
                        android:textColor="@color/colorTextTomorrowView"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textTodayView"
                        app:layout_constraintHorizontal_bias="0.513"
                        app:layout_constraintStart_toStartOf="@+id/textTodayView"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAirPressureToday" />

                    <TextView
                        android:id="@+id/textTempTomorrowView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degrees"
                        android:textColor="@color/colorTextTempTomorrowView"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textTomorrowDateView"
                        app:layout_constraintStart_toStartOf="@+id/textTomorrowDateView"
                        app:layout_constraintTop_toBottomOf="@+id/textTomorrowDateView" />

                    <TextView
                        android:id="@+id/textWeatherTomorrowView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunny"
                        android:textColor="@color/colorTextWeatherTomorrowView"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/textTodayDateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todayDate"
                        android:textColor="@color/colorTextTodayDateView"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textTodayView"
                        app:layout_constraintStart_toStartOf="@+id/textTodayView"
                        app:layout_constraintTop_toBottomOf="@+id/textTodayView" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        app:layout_constraintEnd_toEndOf="@+id/textTodayDateView"
                        app:layout_constraintStart_toStartOf="@+id/textTodayView"
                        app:layout_constraintTop_toBottomOf="@+id/textTempTodayView"
                        app:srcCompat="@drawable/cloudy" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toEndOf="@+id/textWeatherTodayView"
                        app:layout_constraintTop_toBottomOf="@+id/textTempTomorrowView"
                        app:srcCompat="@drawable/sunny" />

                    <TextView
                        android:id="@+id/textTodayView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/today"
                        android:textColor="@color/colorTextTodayView"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/cityView"
                        app:layout_constraintHorizontal_bias="0.488"
                        app:layout_constraintStart_toStartOf="@+id/cityView"
                        app:layout_constraintTop_toBottomOf="@+id/cityView" />

                    <TextView
                        android:id="@+id/textViewWindSpeedToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/textWindSpeedToday"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="@+id/textWeatherTodayView"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/textViewAirPressureToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/textAirPressureToday"
                        app:layout_constraintEnd_toStartOf="@+id/windSpeedTodayView"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/textViewWindSpeedToday"
                        app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeedToday" />

                    <TextView
                        android:id="@+id/windSpeedTodayView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/windSpeedToday"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textViewWindSpeedToday"
                        app:layout_constraintStart_toEndOf="@+id/textViewWindSpeedToday"
                        app:layout_constraintTop_toTopOf="@+id/textViewWindSpeedToday" />

                    <TextView
                        android:id="@+id/airPressureTodayView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/airPressureToday"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textViewAirPressureToday"
                        app:layout_constraintStart_toEndOf="@+id/textViewAirPressureToday"
                        app:layout_constraintTop_toTopOf="@+id/textViewAirPressureToday" />

                    <TextView
                        android:id="@+id/textViewWindSpeedTomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textWindSpeedToday"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/textWeatherTomorrowView"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/textViewAirPressureTomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/textAirPressureToday"
                        app:layout_constraintEnd_toEndOf="@+id/textViewWindSpeedTomorrow"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/textViewWindSpeedTomorrow"
                        app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeedTomorrow" />

                    <TextView
                        android:id="@+id/windSpeedTomorrowView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/windSpeedTomorrow"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textViewWindSpeedTomorrow"
                        app:layout_constraintStart_toEndOf="@+id/textViewWindSpeedTomorrow"
                        app:layout_constraintTop_toTopOf="@+id/textViewWindSpeedTomorrow" />

                    <TextView
                        android:id="@+id/airPressureTomorrowView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/airPressureTomorrow"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textViewAirPressureTomorrow"
                        app:layout_constraintStart_toEndOf="@+id/textViewAirPressureTomorrow"
                        app:layout_constraintTop_toTopOf="@+id/textViewAirPressureTomorrow" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
